--- a/LMS/Areas/Admin/Views/AssignSubject/AddClassSubject.cshtml
+++ b/LMS/Areas/Admin/Views/AssignSubject/AddClassSubject.cshtml
@@ -18,7 +18,7 @@
                             <div class="table-title">
                                 <div class="row">
                                     <div class="col-md-6">
-                                        <h2>Add <b>Class Subjects</b></h2>
+                                        <h2><b>Add Class Subjects</b></h2>
                                     </div>
                                     <div class="col-md-6 pull-right">
                                         <a asp-area="admin" asp-controller="assignSubject" asp-action="addClassSubject" class="btn btn-success"><i class="material-icons">&#xE147;</i> <span>Add New Class Subjects</span></a>
