--- a/LMS/Areas/Teachers/Views/Class/Lectures.cshtml
+++ b/LMS/Areas/Teachers/Views/Class/Lectures.cshtml
@@ -18,7 +18,7 @@
                                 <div class="table-title">
                                     <div class="row">
                                         <div class="col-md-6">
-                                            <h2>Lecture  <b>List</b></h2>
+                                            <h2><b>Lesson List</b></h2>
                                         </div>
                                         <div class="col-md-6 pull-right">
                                             <a asp-action="AddLecture" asp-controller="Lecture" class="btn btn-success"><i class="material-icons"></i> <span>Add New Lesson</span></a>
