--- a/LMS/Areas/Teachers/Views/Lecture/EditLecture.cshtml
+++ b/LMS/Areas/Teachers/Views/Lecture/EditLecture.cshtml
@@ -14,7 +14,7 @@
             <div class="col-md-12 ">
                 <div class="card">
                     <div class="card-header">
-                        <h5 class="title">Lecture Update</h5>
+                        <h5 class="title">Lesson Update</h5>
                     </div>
                     <div class="card-body">
                         <form enctype="multipart/form-data" asp-controller="Lecture" asp-action="EditLecture">
