--- a/LMS/Areas/Admin/Views/AssignSection/Index.cshtml
+++ b/LMS/Areas/Admin/Views/AssignSection/Index.cshtml
@@ -19,7 +19,7 @@
                             <div class="table-title">
                                 <div class="row">
                                     <div class="col-md-6">
-                                        <h2>Manage <b>Class Sections</b></h2>
+                                        <h2><b>Manage Class Sections</b></h2>
                                     </div>
                                     <div class="col-md-6 pull-right">
                                         <a href="#addClassSectionModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Add New Class Section</span></a>
@@ -84,12 +84,16 @@
                                         
                                         <div class="form-group">
                                             <label>Class Name</label>
-                                            <select id="Class_Id" name="Class_Id" class="form-control" asp-items="@(new SelectList(ViewBag.Class, "Class_Id", "Class_Name"))"></select>
+                                            <select id="Class_Id" name="Class_Id" class="form-control" asp-items="@(new SelectList(ViewBag.Class, "Class_Id", "Class_Name"))">
+                                            <option value="0">--Select--</option>
+                                            </select>
                                         </div>
 
                                         <div class="form-group">
                                             <label>Section Name</label>
-                                            <select id="Section_Id" name="Section_Id" class="form-control" asp-items="@(new SelectList(ViewBag.Section, "Section_Id", "Section_Name"))"></select>
+                                            <select id="Section_Id" name="Section_Id" class="form-control" asp-items="@(new SelectList(ViewBag.Section, "Section_Id", "Section_Name"))">
+                                            <option value="0">--Select--</option>
+                                            </select>
                                         </div>
 
                                     </div>
@@ -119,17 +123,21 @@
                                         </div>
                                         <div class="form-group">
                                             <label>Class Name</label>
-                                            <select id="Class_Id" name="Class_Id" class="form-control" asp-items="@(new SelectList(ViewBag.Class, "Class_Id", "Class_Name"))"></select>
+                                            <select id="Class_Id" name="Class_Id" class="form-control" asp-items="@(new SelectList(ViewBag.Class, "Class_Id", "Class_Name"))">
+                                                <option value="0">--Select--</option>
+                                            </select>
                                         </div>
 
                                         <div class="form-group">
                                             <label>Section Name</label>
-                                            <select id="Section_Id" name="Section_Id" class="form-control" asp-items="@(new SelectList(ViewBag.Section, "Section_Id", "Section_Name"))"></select>
+                                            <select id="Section_Id" name="Section_Id" class="form-control" asp-items="@(new SelectList(ViewBag.Section, "Section_Id", "Section_Name"))">
+                                                <option value="0">--Select--</option>
+                                            </select>
                                         </div>
                                     </div>
                                     <div class="modal-footer">
                                         <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                                        <input type="submit" class="btn btn-info" value="Save">
+                                        <input type="submit" class="btn btn-info" value="Update">
                                         @*Added By Absar*@
                                         <input type="hidden" name="ClassSection_Id" id="ClassSection_Id" />
                                     </div>
