--- a/LMS/Areas/Admin/Views/AssignSubject/Index.cshtml
+++ b/LMS/Areas/Admin/Views/AssignSubject/Index.cshtml
@@ -20,7 +20,7 @@
                             <div class="table-title">
                                 <div class="row">
                                     <div class="col-md-6">
-                                        <h2>Assign Subject To Particular <b>Class & Section</b></h2>
+                                        <h2><b>Assign Subject To Particular Class & Section</b></h2>
                                     </div>
                                     <div class="col-md-6 pull-right">
                                         <a asp-area="admin" asp-controller="assignSubject" asp-action="addClassSubject" class="btn btn-success"><i class="material-icons">&#xE147;</i> <span>Add New Class Subjects</span></a>
@@ -95,23 +95,29 @@
                                         </div>
                                         <div class="form-group">
                                             <label>Class Name</label>
-                                            <select id="Class_Id" name="Class_Id" class="form-control" asp-items="@(new SelectList(ViewBag.Class, "Class_Id", "Class_Name"))"></select>
+                                            <select id="Class_Id" name="Class_Id" class="form-control" asp-items="@(new SelectList(ViewBag.Class, "Class_Id", "Class_Name"))">
+                                            <option value="0">--Select--</option>
+                                            </select>
                                         </div>
 
                                         <div class="form-group">
                                             <label>Section Name</label>
-                                            <select id="Section_Id" name="Section_Id" class="form-control" asp-items="@(new SelectList(ViewBag.Section, "Section_Id", "Section_Name"))"></select>
+                                            <select id="Section_Id" name="Section_Id" class="form-control" asp-items="@(new SelectList(ViewBag.Section, "Section_Id", "Section_Name"))">
+                                            <option value="0">--Select--</option>
+                                            </select>
                                         </div>
 
                                         <div class="form-group">
                                             <label>Subject Name</label>
-                                            <select id="Subject_Id" name="Subject_Id" class="form-control" asp-items="@(new SelectList(ViewBag.Subject, "Subject_Id", "Subject_Name"))"></select>
+                                            <select id="Subject_Id" name="Subject_Id" class="form-control" asp-items="@(new SelectList(ViewBag.Subject, "Subject_Id", "Subject_Name"))">
+                                            <option value="0">--Select--</option>
+                                            </select>
                                         </div>
 
                                     </div>
                                     <div class="modal-footer">
                                         <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                                        <input type="submit" class="btn btn-info" value="Save">
+                                        <input type="submit" class="btn btn-info" value="Update">
                                         @*Added By Absar*@
                                         <input type="hidden" name="ClassSubject_Id" id="ClassSubject_Id" />
                                     </div>
