--- a/LMS/Areas/Admin/Views/Class/Index.cshtml
+++ b/LMS/Areas/Admin/Views/Class/Index.cshtml
@@ -22,7 +22,7 @@
                             <div class="table-title">
                                 <div class="row">
                                     <div class="col-md-6">
-                                        <h2>Manage <b>Classes</b></h2>
+                                        <h2><b>Manage Classes</b></h2>
                                     </div>
                                     <div class="col-md-6 pull-right">
                                         <a href="#addClassModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Add New Class</span></a>
@@ -34,7 +34,7 @@
                             <table id="classpage" class="display" style="width:100%">
                                 <thead>
                                     <tr>
-                                        <th>Class ID</th>
+                                        <th>ID</th>
                                         <th>Class Name</th>
                                         <th>Action</th>
                                     </tr>
@@ -117,7 +117,7 @@
                                         </div>
                                         <div class="modal-footer">
                                             <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                                            <input type="submit" class="btn btn-info" value="Save">
+                                            <input type="submit" class="btn btn-info" value="Update">
                                             @*Added By Absar*@
                                             <input type="hidden" name="Class_Id" id="Class_Id" />
                                         </div>
