--- a/LMS/Areas/Admin/Views/Grade/AddGrade.cshtml
+++ b/LMS/Areas/Admin/Views/Grade/AddGrade.cshtml
@@ -19,7 +19,7 @@
                             <div class="table-title">
                                 <div class="row">
                                     <div class="col-md-6">
-                                        <h2>Add <b>Grades</b></h2>
+                                        <h2><b>Add Grades</b></h2>
                                     </div>
                                     <div class="col-md-6 pull-right">
                                         <a asp-area="admin" asp-controller="grade" asp-action="addGrade" class="btn btn-success"><i class="material-icons">&#xE147;</i> <span>Add New Grades</span></a>
