--- a/LMS/Areas/Admin/Views/Grade/Index.cshtml
+++ b/LMS/Areas/Admin/Views/Grade/Index.cshtml
@@ -20,7 +20,7 @@
                             <div class="table-title">
                                 <div class="row">
                                     <div class="col-md-6">
-                                        <h2>Manage <b>Grade</b></h2>
+                                        <h2><b>Manage Grades</b></h2>
                                     </div>
                                     <div class="col-md-6 pull-right">
                                         <a a asp-area="admin" asp-controller="grade" asp-action="addGrade" class="btn btn-success"><i class="material-icons">&#xE147;</i> <span>Add New Grade</span></a>
@@ -83,7 +83,7 @@
                             <div class="modal-content">
                                 <form method="post" asp-controller="grade" asp-action="editGrade">
                                     <div class="modal-header">
-                                        <h4 class="modal-title">Edit Class</h4>
+                                        <h4 class="modal-title">Edit Grade</h4>
                                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                                     </div>
                                     <div class="modal-body">
@@ -92,8 +92,9 @@
                                             <input type="text" class="form-control" required="" id="Grade_Id" disabled="disabled">
                                         </div>
                                         <div class="form-group">
-                                            <label>Class Name</label>
+                                            <label>Grade Name</label>
                                             <input type="text" class="form-control" required="" name="Grade_Name" id="Grade_Name">
+                                            
                                         </div>
                                         <div class="form-group">
                                             <label>Start From</label>
@@ -106,7 +107,7 @@
                                     </div>
                                     <div class="modal-footer">
                                         <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                                        <input type="submit" class="btn btn-info" value="Save">
+                                        <input type="submit" class="btn btn-info" value="Update">
                                         @*Added By Absar*@
                                         <input type="hidden" name="Grade_Id" id="Grade_Id" />
                                     </div>
@@ -122,7 +123,7 @@
                             <div class="modal-content">
                                 <form method="post" asp-controller="grade" asp-action="deleteGrade">
                                     <div class="modal-header">
-                                        <h4 class="modal-title">Delete Class</h4>
+                                        <h4 class="modal-title">Delete Grade</h4>
                                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                                     </div>
                                     <div class="modal-body">
@@ -236,6 +237,8 @@
                 
 
                 success: function (objGrade) {
+
+                    
 
                     $('#editGradeModal #Grade_Id').val(objGrade.grade_Id);
                     $('#editGradeModal #Grade_Name').val(objGrade.grade_Name);
