--- a/LMS/Areas/Admin/Views/Role/Index.cshtml
+++ b/LMS/Areas/Admin/Views/Role/Index.cshtml
@@ -18,7 +18,7 @@
                             <div class="table-title">
                                 <div class="row">
                                     <div class="col-md-6">
-                                        <h2>Manage <b>Roles</b></h2>
+                                        <h2><b>Manage Roles</b></h2>
                                     </div>
                                     <div class="col-md-6 pull-right">
                                         <a href="#addRoleModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Add New Role</span></a>
@@ -110,7 +110,7 @@
                                     </div>
                                     <div class="modal-footer">
                                         <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                                        <input type="submit" class="btn btn-info" value="Save">
+                                        <input type="submit" class="btn btn-info" value="Update">
                                         @*Added By Absar*@
                                         <input type="hidden" name="Role_Id" id="Role_Id" />
                                     </div>
