--- a/LMS/Areas/Admin/Views/Section/Index.cshtml
+++ b/LMS/Areas/Admin/Views/Section/Index.cshtml
@@ -19,7 +19,7 @@
                             <div class="table-title">
                                 <div class="row">
                                     <div class="col-md-6">
-                                        <h2>Manage <b>Sections</b></h2>
+                                        <h2><b>Manage Sections</b></h2>
                                     </div>
                                     <div class="col-md-6 pull-right">
                                         <a href="#addSectionModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Add New Section</span></a>
@@ -114,7 +114,7 @@
                                     </div>
                                     <div class="modal-footer">
                                         <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                                        <input type="submit" class="btn btn-info" value="Save">
+                                        <input type="submit" class="btn btn-info" value="Update">
                                         @*Added By Absar*@
                                         <input type="hidden" name="Section_Id" id="Section_Id" />
                                     </div>
