--- a/LMS/Areas/Admin/Views/Student/AddStudent.cshtml
+++ b/LMS/Areas/Admin/Views/Student/AddStudent.cshtml
@@ -18,7 +18,7 @@
                                 <div class="table-title">
                                     <div class="row">
                                         <div class="col-md-6">
-                                            <h2>Add <b>Student</b></h2>
+                                            <h2><b>Add Student</b></h2>
                                         </div>
                                         
                                     </div>
