--- a/LMS/Areas/Admin/Views/Student/EditStudent.cshtml
+++ b/LMS/Areas/Admin/Views/Student/EditStudent.cshtml
@@ -18,7 +18,7 @@
                             <div class="table-title">
                                 <div class="row">
                                     <div class="col-md-6">
-                                        <h2>Edit <b>Student</b></h2>
+                                        <h2><b>Edit Student</b></h2>
                                     </div>
                                     
                                 </div>
