--- a/LMS/Areas/Admin/Views/Student/Index.cshtml
+++ b/LMS/Areas/Admin/Views/Student/Index.cshtml
@@ -18,7 +18,7 @@
                             <div class="table-title">
                                 <div class="row">
                                     <div class="col-md-6">
-                                        <h2>Manage <b>Students</b></h2>
+                                        <h2><b>Manage Students</b></h2>
                                     </div>
                                     <div class="col-md-6 pull-right">
                                         <a a asp-area="admin" asp-controller="student" asp-action="addStudent" class="btn btn-success"><i class="material-icons">&#xE147;</i> <span>Add New Student</span></a>
@@ -89,7 +89,7 @@
                         </div>
                     </div>
 
-                    <!-- Edit Modal HTML -->
+                    <!-- Add Modal HTML -->
                     <div id="assignStudentClassModal" class="modal fade">
                         <div class="modal-dialog">
                             <div class="modal-content">
@@ -109,17 +109,21 @@
                                         </div>
                                         <div class="form-group">
                                             <label>Class Name</label>
-                                            <select id="Class_Id" name="Class_Id" class="form-control" asp-for="Class_Id" asp-items="@Model.Classes"></select>
+                                            <select id="Class_Id" name="Class_Id" class="form-control" asp-for="Class_Id" asp-items="@Model.Classes">
+                                            <option value="0">--Select--</option>
+                                            </select>
                                         </div>
 
                                         <div class="form-group">
                                             <label>Section Name</label>
-                                            <select id="Section_Id" name="Section_Id" class="form-control" asp-for="Section_Id" asp-items="@Model.Sections"></select>
+                                            <select id="Section_Id" name="Section_Id" class="form-control" asp-for="Section_Id" asp-items="@Model.Sections">
+                                                <option value="0">--Select--</option>
+                                            </select>
                                         </div>
                                     </div>
                                     <div class="modal-footer">
                                         <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                                        <input type="submit" class="btn btn-info" value="Save">
+                                        <input type="submit" class="btn btn-info" value="Update">
                                         @*Added By Absar*@
                                         <input type="hidden" id="Student_Id" name="Student_Id" />
                                         <input type="hidden" id="Student_Name" name="Student_Name" />
