--- a/LMS/Areas/Admin/Views/Subject/Index.cshtml
+++ b/LMS/Areas/Admin/Views/Subject/Index.cshtml
@@ -19,7 +19,7 @@
                             <div class="table-title">
                                 <div class="row">
                                     <div class="col-md-6">
-                                        <h2>Manage <b>Subjects</b></h2>
+                                        <h2><b>Manage Subjects</b></h2>
                                     </div>
                                     <div class="col-md-6 pull-right">
                                         <a href="#addSubjectModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Add New Subject</span></a>
@@ -99,7 +99,7 @@
                             <div class="modal-content">
                                 <form method="post" asp-controller="subject" asp-action="editSubject">
                                     <div class="modal-header">
-                                        <h4 class="modal-title">Edit Class</h4>
+                                        <h4 class="modal-title">Edit Subject</h4>
                                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                                     </div>
                                     <div class="modal-body">
@@ -114,7 +114,7 @@
                                     </div>
                                     <div class="modal-footer">
                                         <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                                        <input type="submit" class="btn btn-info" value="Save">
+                                        <input type="submit" class="btn btn-info" value="Update">
                                         @*Added By Absar*@
                                         <input type="hidden" name="Subject_Id" id="Subject_Id" />
                                     </div>
