--- a/LMS/Areas/Admin/Views/Teacher/EditTeacher.cshtml
+++ b/LMS/Areas/Admin/Views/Teacher/EditTeacher.cshtml
@@ -19,7 +19,7 @@
                             <div class="table-title">
                                 <div class="row">
                                     <div class="col-md-6">
-                                        <h2>Eidt <b>Teacher</b></h2>
+                                        <h2><b>Eidt Teacher</b></h2>
                                     </div>
                                     
                                 </div>
