--- a/LMS/Areas/Admin/Views/Teacher/TeacherClassesSubjects.cshtml
+++ b/LMS/Areas/Admin/Views/Teacher/TeacherClassesSubjects.cshtml
@@ -18,7 +18,7 @@
                             <div class="table-title">
                                 <div class="row">
                                     <div class="col-md-6">
-                                        <h2>Teacher Subjects</h2>
+                                        <h2><b>Teacher Subjects</b></h2>
                                     </div>
                                     
                                 </div>
