--- a/LMS/Areas/Admin/Views/Teacher/TeacherSubjectDetail.cshtml
+++ b/LMS/Areas/Admin/Views/Teacher/TeacherSubjectDetail.cshtml
@@ -18,7 +18,7 @@
                             <div class="table-title">
                                 <div class="row">
                                     <div class="col-md-6">
-                                        <h2>Teacher Subject Details <b>With Classes</b></h2>
+                                        <h2><b>Teacher Subject Details With Classes</b></h2>
                                     </div>
                                     
                                 </div>
@@ -105,17 +105,23 @@
 
                                         <div class="form-group">
                                             <label>Class Name</label>
-                                            <select id="Class_Id" name="Class_Id" class="form-control" asp-items="@(new SelectList(ViewBag.Class, "Class_Id", "Class_Name"))"></select>
+                                            <select id="Class_Id" name="Class_Id" class="form-control" asp-items="@(new SelectList(ViewBag.Class, "Class_Id", "Class_Name"))">
+                                            <option value="0">--Select</option>
+                                            </select>
                                         </div>
 
                                         <div class="form-group">
                                             <label>Section Name</label>
-                                            <select id="Section_Id" name="Section_Id" class="form-control" asp-items="@(new SelectList(ViewBag.Section, "Section_Id", "Section_Name"))"></select>
+                                            <select id="Section_Id" name="Section_Id" class="form-control" asp-items="@(new SelectList(ViewBag.Section, "Section_Id", "Section_Name"))">
+                                            <option value="0">--Select</option>
+                                            </select>
                                         </div>
 
                                         <div class="form-group">
                                             <label>Subject Name</label>
-                                            <select id="Subject_Id" name="Subject_Id" class="form-control" asp-items="@(new SelectList(ViewBag.Subjects, "Subject_Id", "Subject_Name"))"></select>
+                                            <select id="Subject_Id" name="Subject_Id" class="form-control" asp-items="@(new SelectList(ViewBag.Subjects, "Subject_Id", "Subject_Name"))">
+                                            <option value="0">--Select</option>
+                                            </select>
                                         </div>
 
 
@@ -123,7 +129,7 @@
                                     </div>
                                     <div class="modal-footer">
                                         <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                                        <input type="submit" class="btn btn-info" value="Save">
+                                        <input type="submit" class="btn btn-info" value="Update">
 
                                         <input type="hidden" name="TeacherSubject_Id" id="TeacherSubject_Id" />
                                         <input type="hidden" name="Teacher_Id" id="Teacher_Id" />
