--- a/LMS/Areas/Admin/Views/User/Index.cshtml
+++ b/LMS/Areas/Admin/Views/User/Index.cshtml
@@ -20,7 +20,7 @@
                             <div class="table-title">
                                 <div class="row">
                                     <div class="col-md-6">
-                                        <h2>Manage <b>Users</b></h2>
+                                        <h2><b>Manage Users</b></h2>
                                     </div>
                                     <div class="col-md-6 pull-right">
                                         <a href="#addUserModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Add New User</span></a>
@@ -111,7 +111,9 @@
 
                                             <label>User Role</label>
 
-                                            <select id="UserRole" name="UserRole" class="form-control" asp-items="@(new SelectList(ViewBag.Role, "Id", "Name"))"></select>
+                                            <select id="UserRole" name="UserRole" class="form-control" asp-items="@(new SelectList(ViewBag.Role, "Id", "Name"))">
+                                            <option value="0">--Select--</option>
+                                            </select>
 
                                         </div>
                                     </div>
@@ -156,13 +158,15 @@
 
                                                 <label>User Role</label>
 
-                                                <select id="User_Role" name="User_Role" class="form-control" asp-items="@(new SelectList(ViewBag.Role, "Id", "Name"))"></select>
+                                                <select id="User_Role" name="User_Role" class="form-control" asp-items="@(new SelectList(ViewBag.Role, "Id", "Name"))">
+                                                <option value="0">--Select--</option>
+                                                </select>
 
                                             </div>
                                         </div>
                                         <div class="modal-footer">
                                             <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                                            <input type="submit" class="btn btn-info" value="Save">
+                                            <input type="submit" class="btn btn-info" value="Update">
                                             @*Added By Absar*@
                                             <input type="hidden" name="User_Id" id="User_Id" />
                                         </div>
