--- a/LMS/Areas/Teachers/Views/Lecture/Index.cshtml
+++ b/LMS/Areas/Teachers/Views/Lecture/Index.cshtml
@@ -18,7 +18,7 @@
                             <div class="table-title">
                                 <div class="row">
                                     <div class="col-md-6">
-                                        <h2>Lecture  <b>List</b></h2>
+                                        <h2><b>Lesson  List</b></h2>
                                     </div>
                                     <div class="col-md-6 pull-right">
                                         <a asp-area="teachers" asp-controller="lecture" asp-action="addLecture" class="btn btn-success"><i class="material-icons"></i> <span>Add New Lecture</span></a>
@@ -29,8 +29,8 @@
                             <table id="classpage" class="display" style="width:100%">
                                 <thead>
                                     <tr>
-                                        <th>Lecture ID</th>
-                                        <th>Lecture Name</th>
+                                        <th>Lesson ID</th>
+                                        <th>Lesson Name</th>
                                         <th>Date</th>
                                         <th>Action</th>
                                     </tr>
@@ -42,16 +42,16 @@
                                             <td>@item.Lecture_Id</td>
                                             <td>@item.Lecture_Name</td>
                                             <td>@item.LecturePost_Date</td>
-                                            <td>
-                                                <a href="#editSubjectModal" class="edit" id="edit" data-toggle="modal">
-                                                    <i class="material-icons" data-toggle="tooltip" title="" data-original-title="Edit"></i>
+                                            <td style="font-size:16px;">
+                                                <a asp-controller="lecture" asp-action="editLecture" asp-route-id="@item.Lecture_Id" class="edit" id="edit">
+                                                    <i class="fas fa-pen"></i>
                                                 </a>
 
                                                 <a href="#deleteLectureModal" class="delete" id="delete" data-toggle="modal">
-                                                    <i class="material-icons" data-toggle="tooltip" title="" data-original-title="Delete"></i>
+                                                    <i class="fas fa-trash"></i>
                                                 </a>
 
-                                                <a href="#" class="delete" data-toggle="modal"><i class="fas fa-file-archive"></i></a>
+                                                <a asp-controller="teachers/Lecture" asp-action="downloadLecture" asp-route-lectureId="@item.Lecture_Id" class="delete"><i class="fas fa-file-archive"></i></a>
 
 
                                                 @*Added BY Absar To get parentid*@
@@ -66,71 +66,14 @@
                             </div>
                         </div>
                     </div>
-                    <!-- Add Modal HTML -->
-                    <div id="addClassModal" class="modal fade">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <form method="post" asp-controller="class" asp-action="addClass">
-                                    <div class="modal-header">
-                                        <h4 class="modal-title">Add Class</h4>
-                                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                                    </div>
-                                    <div class="modal-body">
-                                        @*<div class="form-group">
-                                                <label>Class ID</label>
-                                                <input type="text" class="form-control" required="" name="class_Id">
-                                            </div>*@
-                                        <div class="form-group">
-                                            <label>Class Name</label>
-                                            <input type="text" class="form-control" required="" name="Class_Name">
-                                        </div>
-                                    </div>
-                                    <div class="modal-footer">
-                                        <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                                        <input type="submit" class="btn btn-success" value="Add">
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
 
-
-                    <!-- Edit Modal HTML -->
-                    <div id="editClassModal" class="modal fade">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <form method="post" asp-controller="class" asp-action="editClass">
-                                    <div class="modal-header">
-                                        <h4 class="modal-title">Edit Class</h4>
-                                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                                    </div>
-                                    <div class="modal-body">
-                                        <div class="form-group">
-                                            <label>Class ID</label>
-                                            <input type="text" class="form-control" required="" id="Class_Id" disabled="disabled">
-                                        </div>
-                                        <div class="form-group">
-                                            <label>Class Name</label>
-                                            <input type="text" class="form-control" required="" name="Class_Name" id="Class_Name">
-                                        </div>
-                                    </div>
-                                    <div class="modal-footer">
-                                        <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                                        <input type="submit" class="btn btn-info" value="Save">
-                                        @*Added By Absar*@
-                                        <input type="hidden" name="Class_Id" id="Class_Id" />
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
 
 
                     <!-- Delete Modal HTML -->
                     <div id="deleteLectureModal" class="modal fade">
                         <div class="modal-dialog">
                             <div class="modal-content">
-                                <form method="post" asp-controller="class" asp-action="deleteLecture">
+                                <form method="post" asp-controller="Lecture" asp-action="deleteLecture">
                                     <div class="modal-header">
                                         <h4 class="modal-title">Delete Lecture</h4>
                                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
@@ -198,10 +141,22 @@
 <script>
     $(document).ready(function () {
 
-        $('#classpage').DataTable();
+
+
+        //Get Class_Id for Delete Added By Absar
+        $('#classpage #delete').on('click', function () {
+            var Lecture_Id = $(this).parent().find('.Lecture_Id').val();
+
+            $('#deleteLectureModal #Lecture_Id').val(Lecture_Id);
+        });
+
+        
 
         // Activate tooltip
         $('[data-toggle="tooltip"]').tooltip();
+
+
+        $('#classpage').DataTable();
 
     });
 </script>
